src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkBlendMode_Src(void);
CAPI unsigned char SkBlendMode_Dst(void);
CAPI unsigned char SkBlendMode_SrcOver(void);
CAPI unsigned char SkBlendMode_DstOver(void);
CAPI unsigned char SkBlendMode_SrcIn(void);
CAPI unsigned char SkBlendMode_DstIn(void);
CAPI unsigned char SkBlendMode_SrcOut(void);
CAPI unsigned char SkBlendMode_DstOut(void);
CAPI unsigned char SkBlendMode_SrcATop(void);