src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Src()
     * }
     */
    public static byte SkBlendMode_Src() {
        var mh$ = SkBlendMode_Src.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Src");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Dst {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Dst");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Dst()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Dst$descriptor() {
        return SkBlendMode_Dst.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Dst()
     * }
     */
    public static MethodHandle SkBlendMode_Dst$handle() {
        return SkBlendMode_Dst.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Dst()
     * }
     */
    public static MemorySegment SkBlendMode_Dst$address() {
        return SkBlendMode_Dst.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Dst()
     * }
     */
    public static byte SkBlendMode_Dst() {
        var mh$ = SkBlendMode_Dst.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Dst");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_SrcOver {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_SrcOver");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOver()
     * }
     */
    public static FunctionDescriptor SkBlendMode_SrcOver$descriptor() {
        return SkBlendMode_SrcOver.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOver()
     * }
     */
    public static MethodHandle SkBlendMode_SrcOver$handle() {
        return SkBlendMode_SrcOver.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOver()
     * }
     */
    public static MemorySegment SkBlendMode_SrcOver$address() {
        return SkBlendMode_SrcOver.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOver()
     * }
     */
    public static byte SkBlendMode_SrcOver() {
        var mh$ = SkBlendMode_SrcOver.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_SrcOver");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_DstOver {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_DstOver");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOver()
     * }
     */
    public static FunctionDescriptor SkBlendMode_DstOver$descriptor() {
        return SkBlendMode_DstOver.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOver()
     * }
     */
    public static MethodHandle SkBlendMode_DstOver$handle() {
        return SkBlendMode_DstOver.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOver()
     * }
     */
    public static MemorySegment SkBlendMode_DstOver$address() {
        return SkBlendMode_DstOver.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOver()
     * }
     */
    public static byte SkBlendMode_DstOver() {
        var mh$ = SkBlendMode_DstOver.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_DstOver");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_SrcIn {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_SrcIn");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcIn()
     * }
     */
    public static FunctionDescriptor SkBlendMode_SrcIn$descriptor() {
        return SkBlendMode_SrcIn.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcIn()
     * }
     */
    public static MethodHandle SkBlendMode_SrcIn$handle() {
        return SkBlendMode_SrcIn.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcIn()
     * }
     */
    public static MemorySegment SkBlendMode_SrcIn$address() {
        return SkBlendMode_SrcIn.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcIn()
     * }
     */
    public static byte SkBlendMode_SrcIn() {
        var mh$ = SkBlendMode_SrcIn.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_SrcIn");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_DstIn {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_DstIn");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstIn()
     * }
     */
    public static FunctionDescriptor SkBlendMode_DstIn$descriptor() {
        return SkBlendMode_DstIn.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstIn()
     * }
     */
    public static MethodHandle SkBlendMode_DstIn$handle() {
        return SkBlendMode_DstIn.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstIn()
     * }
     */
    public static MemorySegment SkBlendMode_DstIn$address() {
        return SkBlendMode_DstIn.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstIn()
     * }
     */
    public static byte SkBlendMode_DstIn() {
        var mh$ = SkBlendMode_DstIn.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_DstIn");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_SrcOut {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_SrcOut");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOut()
     * }
     */
    public static FunctionDescriptor SkBlendMode_SrcOut$descriptor() {
        return SkBlendMode_SrcOut.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOut()
     * }
     */
    public static MethodHandle SkBlendMode_SrcOut$handle() {
        return SkBlendMode_SrcOut.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOut()
     * }
     */
    public static MemorySegment SkBlendMode_SrcOut$address() {
        return SkBlendMode_SrcOut.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_SrcOut()
     * }
     */
    public static byte SkBlendMode_SrcOut() {
        var mh$ = SkBlendMode_SrcOut.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_SrcOut");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_DstOut {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_DstOut");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOut()
     * }
     */
    public static FunctionDescriptor SkBlendMode_DstOut$descriptor() {
        return SkBlendMode_DstOut.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOut()
     * }
     */
    public static MethodHandle SkBlendMode_DstOut$handle() {
        return SkBlendMode_DstOut.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOut()
     * }
     */
    public static MemorySegment SkBlendMode_DstOut$address() {
        return SkBlendMode_DstOut.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_DstOut()
     * }
     */
    public static byte SkBlendMode_DstOut() {
        var mh$ = SkBlendMode_DstOut.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_DstOut");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_SrcATop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_SrcATop");
